reduce the font size and icon size for content inside accordion for pdfs, to prevent any overlapping if the sentence is too long, or there are a lot of links in the list.

--- a/wp-content/themes/sydneytheme/src/sass/pdf-block.scss
+++ b/wp-content/themes/sydneytheme/src/sass/pdf-block.scss
@@ -59,11 +59,7 @@
         }
     
         @include breakpoint(desktop) {
-            font-size: 20px;
-        }
-    
-        @include breakpoint(largedesktop) {
-            font-size: 24px;
+            font-size: em(20);
         }
 
         &:hover,
@@ -82,8 +78,8 @@
             margin-left: 30px;
 
             @include breakpoint(desktop) {
-                height: 21px;
-                width: 15px;
+                height: 18px;
+                width: 13px;
             }
         }
     }
